Fixes a number of issues of issues in the Core-Plus implementation